kube/dashboard/dashboard-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/k8s)$ $1/ permanent;
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app.kubernetes.io/name: dashboard-nginx-ingress
    app.kubernetes.io/part-of: dashboard
    app.kubernetes.io/version: 1.0.0
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - control-plane-vm-iac.westeurope.cloudapp.azure.com
      secretName: kubernetes-dashboard-tls
  rules:
    - host: control-plane-vm-iac.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
